fix spacing for new letter sending

--- a/src/Letter.scss
+++ b/src/Letter.scss
@@ -33,7 +33,7 @@ textarea#letter {
 .new-letter-container {
   margin: auto;
   margin-top: 7%;
-  width: 420px;
+  width: 360px;
 
   @if $debug {
     border: 2px solid red;
